Added code from project B

--- a/tpgm generator/CSV_TPGM_gen.ipynb
+++ b/tpgm generator/CSV_TPGM_gen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,15 +10,19 @@
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "num_graphs = 2\n",
-    "num_vertices_per_graph =  (int) (256 / num_graphs)\n",
+    "num_graphs = 64\n",
+    "num_vertices_per_graph = 5 #(int) (256 / num_graphs)\n",
     "num_edges_per_graph = num_vertices_per_graph - 1\n",
+    "graph_depth = 2\n",
+    "num_child_vertices_per_graph = (int) (64 / num_graphs) # n = 64 / num_graphs = 2^6 / num_graphs\n",
+    "num_grandchild_vertices_per_graph = 1 # m = 2^(a - log2(n)) - 1\n",
     "\n",
     "#vertex_type_count = 2 \n",
     "#edge_type_count = 1\n",
     "#graph_type_count = 1\n",
     "\n",
-    "csv_graph_folder = \"csv_\" + f\"{num_graphs}\" + \"_graphs\" \n",
+    "#csv_graph_folder = \"csv_\" + f\"{num_graphs}\" + \"_graphs\" \n",
+    "csv_graph_folder = str(num_graphs)\n",
     "graphs_csv_file = 'graphs.csv'\n",
     "vertices_csv_file = 'vertices.csv'\n",
     "edges_csv_file = 'edges.csv'\n",
@@ -32,7 +36,7 @@
     "# edge_types = [f\"e{i}\" for i in range(edge_type_count)]     # Generate edge types\n",
     "#graph_types = [f\"g{i}\" for i in range(graph_type_count)]   # Generate graph types\n",
     "\n",
-    "vertex_types = [\"parent\", \"child\"]\n",
+    "vertex_types = [\"parent\", \"child\", \"grandchild\"]\n",
     "edge_types = [\"childOf\"]\n",
     "graph_types = [\"graph\"]  \n",
     "timestamp_properties = [\"transaction time\", \"valid time\"]\n",
@@ -55,22 +59,36 @@
     "vertices_properties_config = generate_entity_properties_config(vertex_types, num_properties_vertices, use_random_properties)\n",
     "edges_properties_config = generate_entity_properties_config(edge_types, num_properties_edges, use_random_properties)\n",
     "\n",
+    "\n",
     "graphs_csv = \"\"\n",
     "vertices_csv = \"\"\n",
     "edges_csv = \"\"\n",
     "metadata_csv = \"\"\n",
     "\n",
     "# Initialize the starting ID for parent vertices and edges\n",
-    "parent_vertex_start_id = num_vertices_per_graph\n",
-    "edge_start_id = num_edges_per_graph - 1\n",
+    "#parent_vertex_start_id = num_vertices_per_graph\n",
+    "#edge_start_id = num_edges_per_graph - 1\n",
+    "\n",
+    "entity_index = num_graphs - 1\n",
+    "\n",
+    "def get_id():\n",
+    "    global entity_index\n",
+    "    entity_index += 1\n",
+    "\n",
+    "    return f\"{entity_index:024x}\"\n",
+    "\n",
+    "timestamp_counter = 0\n",
     "\n",
     "def generate_timestamps(transactionAndValidIdentical):\n",
+    "    global timestamp_counter\n",
     "    timestamps = []\n",
     "    if transactionAndValidIdentical:\n",
-    "        first_random = random.randint(0, 999999999) # Technically possible max and min values -> (-9223372036854775808,9223372036854775807)\n",
-    "        second_random = random.randint(first_random, 999999999) # Greater than or equal to the first one\n",
-    "        timestamps.append((first_random, second_random))\n",
-    "        timestamps.append((first_random, second_random))\n",
+    "        # first_random = random.randint(0, 999999999) # Technically possible max and min values -> (-9223372036854775808,9223372036854775807)\n",
+    "        # second_random = random.randint(first_random, 999999999) # Greater than or equal to the first one\n",
+    "        # timestamps.append((first_random, second_random))\n",
+    "        # timestamps.append((first_random, second_random))\n",
+    "        timestamps = [(timestamp_counter, timestamp_counter),(timestamp_counter, timestamp_counter)]\n",
+    "        timestamp_counter += 1\n",
     "    else:\n",
     "        for _ in range(2):\n",
     "            first_random = random.randint(0, 999999999)\n",
@@ -79,74 +97,123 @@
     "\n",
     "    return timestamps\n",
     "\n",
-    "transactionAndValidIdentical = True\n",
+    "def generate_child_vertices(graph_id, parent_vertex_id, depth, label, num_vertices):\n",
+    "    depth -= 1\n",
+    "    global vertices_csv\n",
+    "    global edges_csv\n",
+    "    #global num_vertices_per_graph\n",
+    "    global vertices_properties_config\n",
+    "    global num_grandchild_vertices_per_graph\n",
+    "    global graph_depth\n",
     "\n",
-    "# Generate graph data\n",
-    "for i in range(num_graphs):\n",
-    "    graph_id = f\"{i:024x}\"\n",
-    "    graph_label = random.choice(graph_types)\n",
-    "    graph_properties = \"|\".join([f\"{random.randint(1, 5)}\" for _ in range(graphs_properties_config[graph_label])])\n",
-    "    graph_timestamps = generate_timestamps(transactionAndValidIdentical) \n",
-    "    graph_timestamps_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in graph_timestamps])\n",
-    "    \n",
-    "    graphs_csv += f\"{graph_id};{graph_label};{graph_properties};{graph_timestamps_str}\\n\"\n",
-    "\n",
-    "    # Generate parent vertex for each graph\n",
-    "    parent_vertex_id = f\"{i * num_vertices_per_graph + num_graphs:024x}\"  # Unique ID for each parent vertex\n",
-    "    parent_vertex_graphs = f\"[{graph_id}]\"\n",
-    "    parent_vertex_label = \"parent\"\n",
-    "    parent_vertex_properties = \"|\".join([f\"{random.randint(1, 100)}\" for _ in range(vertices_properties_config[parent_vertex_label])])\n",
-    "    parent_vertex_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
-    "    parent_vertex_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in parent_vertex_timestamps])\n",
-    "    vertices_csv += f\"{parent_vertex_id};{parent_vertex_graphs};{parent_vertex_label};{parent_vertex_properties};{parent_vertex_timestamp_str}\\n\"\n",
+    "    grnd_vert = num_grandchild_vertices_per_graph\n",
     "\n",
     "    # Connect child vertices to the parent with edges\n",
-    "    for j in range(1, num_vertices_per_graph):\n",
-    "        child_vertex_id = f\"{(i * num_vertices_per_graph + num_graphs) + j:024x}\"  # Unique ID for each child vertex\n",
+    "    for i in range(0, num_vertices):\n",
+    "        child_vertex_id = get_id() # Unique ID for each child vertex\n",
     "        child_vertex_graphs = f\"[{graph_id}]\"\n",
-    "        child_vertex_label = \"child\"\n",
+    "        child_vertex_label = label #\"child\"\n",
     "        child_vertex_properties = \"|\".join([f\"{random.randint(1, 100)}\" for _ in range(vertices_properties_config[child_vertex_label])])\n",
     "        child_vertex_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
     "        child_vertex_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in child_vertex_timestamps])\n",
     "        vertices_csv += f\"{child_vertex_id};{child_vertex_graphs};{child_vertex_label};{child_vertex_properties};{child_vertex_timestamp_str}\\n\"\n",
     "\n",
     "        # Create edge between child and parent\n",
-    "        edge_id = f\"{(i * num_vertices_per_graph + num_graphs) + j + num_edges_per_graph + num_vertices_per_graph:024x}\"  # Unique ID for each edge\n",
+    "        edge_id = get_id() #f\"{(i * num_vertices_per_graph + num_graphs) + j + num_edges_per_graph + num_vertices_per_graph:024x}\"  # Unique ID for each edge\n",
     "        edge_graphs = f\"[{graph_id}]\"\n",
     "        source_vertex = child_vertex_id\n",
     "        target_vertex = parent_vertex_id\n",
     "        edge_label = \"childOf\"\n",
     "        edge_properties = \"|\".join([f\"{random.randint(1, 10)}\" for _ in range(edges_properties_config[edge_label])])\n",
-    "        edge_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
-    "        edge_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in edge_timestamps])\n",
+    "        #edge_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
+    "        #edge_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in edge_timestamps])\n",
     "        edges_csv += f\"{edge_id};{edge_graphs};{source_vertex};{target_vertex};{edge_label};{edge_properties};{child_vertex_timestamp_str}\\n\" # edge_timestamp_str --> currently it copies the timestamp of its source vertex\n",
     "\n",
-    "def generate_metadata(entity_types, entity_labels, entity_properties_config):\n",
-    "    metadata_csv = \"\"\n",
-    "    \n",
-    "    for entity_type, label in zip(entity_types, entity_labels):\n",
-    "        metadata_csv += f\"{entity_type};{label};\"\n",
-    "        entity_properties = \",\".join([f\"{label}_prop_{j}:int\" for j in range(entity_properties_config[label])])\n",
-    "        metadata_csv += entity_properties + \"\\n\"\n",
-    "    \n",
-    "    return metadata_csv\n",
+    "        # if depth is graph_depth -1:\n",
+    "        #     print(\"current index: \" + str(i))\n",
     "\n",
-    "metadata_csv = generate_metadata([\"g\"] * num_graphs, graph_types, graphs_properties_config)\n",
-    "metadata_csv += generate_metadata([\"v\"] * len(vertex_types), vertex_types, vertices_properties_config)\n",
-    "metadata_csv += generate_metadata([\"e\"] * len(edge_types), edge_types, edges_properties_config)\n",
+    "        if i is num_vertices - 1:\n",
+    "            grnd_vert -= 1\n",
     "\n",
-    "# Save the generated data to separate files\n",
-    "with open(os.path.join(csv_graph_folder, graphs_csv_file), \"w\") as f:\n",
-    "    f.write(graphs_csv)\n",
+    "        if depth > 0:\n",
+    "            generate_child_vertices(graph_id, child_vertex_id, depth, \"grandchild\", grnd_vert)\n",
     "\n",
-    "with open(os.path.join(csv_graph_folder, vertices_csv_file), \"w\") as f:\n",
-    "    f.write(vertices_csv)\n",
     "\n",
-    "with open(os.path.join(csv_graph_folder, edges_csv_file), \"w\") as f:\n",
-    "    f.write(edges_csv)\n",
+    "transactionAndValidIdentical = True\n",
+    "def main():\n",
+    "    global graphs_csv\n",
+    "    global vertices_csv\n",
     "\n",
-    "with open(os.path.join(csv_graph_folder, metadata_csv_file), \"w\") as f:\n",
-    "    f.write(metadata_csv)"
+    "    # Generate graph data\n",
+    "    for i in range(num_graphs):\n",
+    "        graph_id = f\"{i:024x}\"\n",
+    "        graph_label = random.choice(graph_types)\n",
+    "        graph_properties = \"|\".join([f\"{random.randint(1, 5)}\" for _ in range(graphs_properties_config[graph_label])])\n",
+    "        #graph_timestamps = generate_timestamps(transactionAndValidIdentical) \n",
+    "        graph_timestamps = [(timestamp_counter, timestamp_counter),(timestamp_counter, timestamp_counter)]\n",
+    "        graph_timestamps_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in graph_timestamps])\n",
+    "        \n",
+    "        graphs_csv += f\"{graph_id};{graph_label};{graph_properties};{graph_timestamps_str}\\n\"\n",
+    "\n",
+    "        # Generate parent vertex for each graph\n",
+    "        parent_vertex_id = get_id() #f\"{i * num_vertices_per_graph + num_graphs:024x}\"  # Unique ID for each parent vertex\n",
+    "        parent_vertex_graphs = f\"[{graph_id}]\"\n",
+    "        parent_vertex_label = \"parent\"\n",
+    "        parent_vertex_properties = \"|\".join([f\"{random.randint(1, 100)}\" for _ in range(vertices_properties_config[parent_vertex_label])])\n",
+    "        parent_vertex_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
+    "        parent_vertex_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in parent_vertex_timestamps])\n",
+    "        vertices_csv += f\"{parent_vertex_id};{parent_vertex_graphs};{parent_vertex_label};{parent_vertex_properties};{parent_vertex_timestamp_str}\\n\"\n",
+    "\n",
+    "        generate_child_vertices(graph_id, parent_vertex_id, graph_depth, \"child\", num_child_vertices_per_graph)\n",
+    "        # # Connect child vertices to the parent with edges\n",
+    "        # for j in range(1, num_vertices_per_graph):\n",
+    "        #     child_vertex_id = f\"{(i * num_vertices_per_graph + num_graphs) + j:024x}\"  # Unique ID for each child vertex\n",
+    "        #     child_vertex_graphs = f\"[{graph_id}]\"\n",
+    "        #     child_vertex_label = \"child\"\n",
+    "        #     child_vertex_properties = \"|\".join([f\"{random.randint(1, 100)}\" for _ in range(vertices_properties_config[child_vertex_label])])\n",
+    "        #     child_vertex_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
+    "        #     child_vertex_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in child_vertex_timestamps])\n",
+    "        #     vertices_csv += f\"{child_vertex_id};{child_vertex_graphs};{child_vertex_label};{child_vertex_properties};{child_vertex_timestamp_str}\\n\"\n",
+    "\n",
+    "        #     # Create edge between child and parent\n",
+    "        #     edge_id = f\"{(i * num_vertices_per_graph + num_graphs) + j + num_edges_per_graph + num_vertices_per_graph:024x}\"  # Unique ID for each edge\n",
+    "        #     edge_graphs = f\"[{graph_id}]\"\n",
+    "        #     source_vertex = child_vertex_id\n",
+    "        #     target_vertex = parent_vertex_id\n",
+    "        #     edge_label = \"childOf\"\n",
+    "        #     edge_properties = \"|\".join([f\"{random.randint(1, 10)}\" for _ in range(edges_properties_config[edge_label])])\n",
+    "        #     edge_timestamps = generate_timestamps(transactionAndValidIdentical)\n",
+    "        #     edge_timestamp_str = \",\".join([f\"({tx_from},{tx_to})\" for (tx_from, tx_to) in edge_timestamps])\n",
+    "        #     edges_csv += f\"{edge_id};{edge_graphs};{source_vertex};{target_vertex};{edge_label};{edge_properties};{child_vertex_timestamp_str}\\n\" # edge_timestamp_str --> currently it copies the timestamp of its source vertex\n",
+    "\n",
+    "    def generate_metadata(entity_types, entity_labels, entity_properties_config):\n",
+    "        metadata_csv = \"\"\n",
+    "        \n",
+    "        for entity_type, label in zip(entity_types, entity_labels):\n",
+    "            metadata_csv += f\"{entity_type};{label};\"\n",
+    "            entity_properties = \",\".join([f\"{label}_prop_{j}:int\" for j in range(entity_properties_config[label])])\n",
+    "            metadata_csv += entity_properties + \"\\n\"\n",
+    "        \n",
+    "        return metadata_csv\n",
+    "\n",
+    "    metadata_csv = generate_metadata([\"g\"] * num_graphs, graph_types, graphs_properties_config)\n",
+    "    metadata_csv += generate_metadata([\"v\"] * len(vertex_types), vertex_types, vertices_properties_config)\n",
+    "    metadata_csv += generate_metadata([\"e\"] * len(edge_types), edge_types, edges_properties_config)\n",
+    "\n",
+    "    # Save the generated data to separate files\n",
+    "    with open(os.path.join(csv_graph_folder, graphs_csv_file), \"w\") as f:\n",
+    "        f.write(graphs_csv)\n",
+    "\n",
+    "    with open(os.path.join(csv_graph_folder, vertices_csv_file), \"w\") as f:\n",
+    "        f.write(vertices_csv)\n",
+    "\n",
+    "    with open(os.path.join(csv_graph_folder, edges_csv_file), \"w\") as f:\n",
+    "        f.write(edges_csv)\n",
+    "\n",
+    "    with open(os.path.join(csv_graph_folder, metadata_csv_file), \"w\") as f:\n",
+    "        f.write(metadata_csv)\n",
+    "\n",
+    "main()"
    ]
   }
  ],
